--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,7 +59,9 @@
     <Compile Include="Assets\Scripts\Model\Definitions\DefsFacade.cs" />
     <Compile Include="Assets\Resources\assets\Free Pixel Art Forest\Demo\MoveBackground.cs" />
     <Compile Include="Assets\Scripts\Components\SpawnListComponent.cs" />
+    <Compile Include="Assets\Scripts\Model\Data\Properties\PrefsPersistentProperty.cs" />
     <Compile Include="Assets\Scripts\Components\RoomGenerator 2.0\RoomPoints.cs" />
+    <Compile Include="Assets\Scripts\Model\Data\Properties\FloatPersistentProperty.cs" />
     <Compile Include="Assets\Scripts\UI\MainMenu\MainMenuWindow.cs" />
     <Compile Include="Assets\Scripts\Components\DamageComponent.cs" />
     <Compile Include="Assets\Scripts\Components\HealingComponent.cs" />
@@ -67,20 +69,24 @@
     <Compile Include="Assets\Scripts\Components\SpriteAnimation.cs" />
     <Compile Include="Assets\Scripts\Creatures\Weapons\SinusoidalProjectile.cs" />
     <Compile Include="Assets\Scripts\Components\InteractableComponent.cs" />
+    <Compile Include="Assets\Scripts\Model\SaveSystem.cs" />
     <Compile Include="Assets\Scripts\HandlesUtils.cs" />
     <Compile Include="Assets\Scripts\Components\ModifyHealthComponent.cs" />
     <Compile Include="Assets\Scripts\Components\HealthComponent.cs" />
     <Compile Include="Assets\Scripts\Components\ArmHeroComponent.cs" />
     <Compile Include="Assets\Scripts\Components\SceneChangeComponent.cs" />
+    <Compile Include="Assets\Scripts\Model\Data\Properties\PersistentProperty.cs" />
     <Compile Include="Assets\Scripts\Creatures\Creature.cs" />
     <Compile Include="Assets\Scripts\Creatures\PlatformPatrol.cs" />
     <Compile Include="Assets\Scripts\Character\Character.cs" />
     <Compile Include="Assets\Scripts\Character\CheckCircleOverlap.cs" />
+    <Compile Include="Assets\Scripts\Character\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\Model\GameSession.cs" />
     <Compile Include="Assets\Scripts\Model\Data\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Components\AddCoin.cs" />
     <Compile Include="Assets\Scripts\Creatures\MobAI.cs" />
     <Compile Include="Assets\Scripts\Components\Audio\PlaySoundComponent.cs" />
+    <Compile Include="Assets\Scripts\Model\Data\GameSettings.cs" />
     <Compile Include="Assets\Scripts\Components\DebugConsole.cs" />
     <Compile Include="Assets\Scripts\Creatures\Weapons\BaseProjectile.cs" />
     <Compile Include="Assets\Scripts\Creatures\PointPatrol.cs" />
