--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Assets\Scripts\UI\MainMenu\ConfirmNewGameWindow.cs" />
     <Compile Include="Assets\Scripts\Model\Definitions\InventoryItemDefinitions.cs" />
     <Compile Include="Assets\Scripts\Components\CoinValue.cs" />
+    <Compile Include="Assets\Scripts\UI\Hud\Dialogi\DialogController.cs" />
+    <Compile Include="Assets\Scripts\UI\Hud\Dialogi\DialogData.cs" />
+    <Compile Include="Assets\Scripts\Utils\AudioUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Prefabs\Charactert\Warrior free set\License.txt" />
