--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -138,6 +138,9 @@
     <Compile Include="Assets\Scripts\UI\MainMenu\ConfirmNewGameWindow.cs" />
     <Compile Include="Assets\Scripts\Model\Definitions\InventoryItemDefinitions.cs" />
     <Compile Include="Assets\Scripts\Components\CoinValue.cs" />
+    <Compile Include="Assets\Scripts\UI\Widgets\LifeBarWidget.cs" />
+    <Compile Include="Assets\Scripts\Utils\CompositeDisposable.cs" />
+    <Compile Include="Assets\Scripts\UI\Bars\LifeBarEnemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Prefabs\Charactert\Warrior free set\License.txt" />
